</dependency>
```

* Added support for @Vertex.getOutEdges(String...)@ and @Vertex.getInEdges(String...)@
* Updated @AggregatorPipe@ to be fully @SideEffectPipe@ compliant and to respect @getPath()@
* Added @PipeClosure@ to support closure-based pipes
* Migrated all the "Gremlin":http://gremlin.tinkerpop.com specific pipes to Pipes
* Refactored package names to align with pipe semantics


 ==<hr/>==


!https://github.com/tinkerpop/pipes/raw/master/doc/images/pipes-toilet-pipe.png!

h3. Version 0.6 (Toilet -- June 15, 2011)

```xml
<dependency>
  <groupId>com.tinkerpop</groupId>
  <artifactId>pipes</artifactId>
  <version>0.6</version>
</dependency>
```

* @RangeFilterPipe@ max value is now inclusive
* Added @OptionalPipe@ which is like @BackFilterPipe@, but non-filtering.
* Updated @AggregatorPipe@ to support multiple @setStarts()@

==<hr/>==

!https://github.com/tinkerpop/pipes/raw/master/doc/images/pipes-drain-pipe.png!

h3. Version 0.5 (Drain -- May 8, 2011)

```xml
<dependency>
  <groupId>com.tinkerpop</groupId>
  <artifactId>pipes</artifactId>
  <version>0.5</version>
</dependency>
```

* Added @OutPipe@, @InPipe@, and @BothPipe@ to allow for vertex-vertex hoping
* Removed @VertexEdgeLabelFilterPipe@ as it is now covered by more efficient pipes
* Added the @MetaPipe@ interface to allow pipes to acknowledge pipe wrapping
* Added @CopySplitPipe@, @ExhaustMergePipe@, and @FairMergePipe@
* Optimized @PropertyPipe@ and @UniquePathFilterPipe@
* Added support for Pipe.reset() and thus, pipe reuse

==<hr/>==

!https://github.com/tinkerpop/pipes/raw/master/doc/images/pipes-spigot-pipe.png!

h3. Version 0.4 (Spigot -- April 4, 2011)

```xml
<dependency>
  <groupId>com.tinkerpop</groupId>
  <artifactId>pipes</artifactId>
  <version>0.4</version>
</dependency>
```

* Added @StartPipe@ to aid in creating an @Object@-to-@Pipe@ converter
* Removed @VertexEdge@ and @EdgeVertex@ pipes for more low-level/faster pipes.
* Supports new Blueprints packaging scheme.

==<hr/>==
