@@ -1,6 +1,7 @@
 package com.tinkerpop.pipes.sideeffect;
 
 import com.tinkerpop.pipes.AbstractPipe;
+import com.tinkerpop.pipes.PipeClosure;
 
 import java.util.*;
 
@@ -11,15 +12,27 @@ import java.util.*;
  *
  * @author Marko A. Rodriguez (http://markorodriguez.com)
  */
-public class AggregatorPipe<S> extends AbstractPipe<S, S> implements SideEffectPipe<S, S, Collection<S>> {
+public class AggregatorPipe<S> extends AbstractPipe<S, S> implements SideEffectPipe<S, S, Collection> {
 
-    private Collection<S> aggregate;
+    private Collection aggregate;
     private Queue<S> currentObjectQueue = new LinkedList<S>();
     private Queue<List> currentPathQueue = new LinkedList<List>();
     private List currentPath;
+    private PipeClosure closure = null;
 
-    public AggregatorPipe(final Collection<S> aggregate) {
+    public AggregatorPipe(final Collection aggregate) {
         this.aggregate = aggregate;
+    }
+
+    /**
+     * The provided PipeClosure will process the object prior to inserting it into the aggregate collection.
+     *
+     * @param aggregate the aggregate collection
+     * @param closure   a closure to process an object with prior to insertion into the collection
+     */
+    public AggregatorPipe(final Collection aggregate, final PipeClosure closure) {
+        this(aggregate);
+        this.closure = closure;
     }
 
     protected List getPathToHere() {
@@ -46,7 +59,10 @@ public class AggregatorPipe<S> extends AbstractPipe<S, S> implements SideEffectP
                     this.currentPathQueue.clear();
                     while (this.starts.hasNext()) {
                         final S s = this.starts.next();
-                        this.aggregate.add(s);
+                        if (this.closure != null)
+                            this.aggregate.add(this.closure.compute(s));
+                        else
+                            this.aggregate.add(s);
                         this.currentObjectQueue.add(s);
                         this.currentPathQueue.add(super.getPathToHere());
                     }
@@ -58,13 +74,13 @@ public class AggregatorPipe<S> extends AbstractPipe<S, S> implements SideEffectP
         }
     }
 
-    public Collection<S> getSideEffect() {
+    public Collection getSideEffect() {
         return this.aggregate;
     }
 
     public void reset() {
         try {
-            this.aggregate = (Collection<S>) this.aggregate.getClass().getConstructor().newInstance();
+            this.aggregate = this.aggregate.getClass().getConstructor().newInstance();
         } catch (Exception e) {
             throw new RuntimeException(e.getMessage(), e);
         }
