@@ -26,6 +26,8 @@ h3. Version 0.7 (NOT OFFICIALLY RELEASED YET)
 * Added @PipeClosure@ to support closure-based pipes
 * Migrated all the "Gremlin":http://gremlin.tinkerpop.com specific pipes to Pipes
 * Refactored package names to align with pipe semantics
+* Flipped the meaning of @Filter@, where @true@ means pass, and @false@ means filter
+* Added @AggregatorPipe@ @PipeClosure@ to process object prior to insertion into the aggregate collection
 
 
  ==<hr/>==
